examples/test/testpolicy11728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11728
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key28: value42
      key26: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value44
          key31: value24
      podSelector:
        matchLabels:
          key8: value23
